manifests/beer-app.yaml
# Copyright 2018
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
################################################################################
# Beer API service
################################################################################
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: beer-api
  name: beer-api
spec:
  type: ClusterIP
  ports:
    - port: 5000
      name: http
  selector:
    app: beer-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: beer-api
  labels:
    app: beer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beer-api
  template:
    metadata:
      labels:
        app: beer-api
    spec:
      containers:
        - image: gcr.io/chrispage-dev/beer-api:0.4.0
          name: beer-api
          ports:
            - containerPort: 5000
              name: beer-api

################################################################################
# Reviews API service
################################################################################
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reviews-api
  name: reviews-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: reviews-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-api
  labels:
    app: reviews-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reviews-api
  template:
    metadata:
      labels:
        app: reviews-api
    spec:
      containers:
        - image: gcr.io/chrispage-dev/beer-reviews-api:0.2.1
          name: reviews-api
          # imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: reviews-api

################################################################################
# Reviews DB service
################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-db
  labels:
    app: reviews-db
spec:
  type: ClusterIP
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: nodes
  selector:
    app: reviews-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-db
  labels:
    app: reviews-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-db
  template:
    metadata:
      labels:
        app: reviews-db
    spec:
      containers:
        - image: docker.elastic.co/elasticsearch/elasticsearch:6.1.1
          name: reviews-db
          ports:
            - containerPort: 9200
              name: rest
            - containerPort: 9300
              name: nodes

################################################################################
# Details API service
################################################################################
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: details-api
  name: details-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: details-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: details-api
  labels:
    app: details-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: details-api
  template:
    metadata:
      labels:
        app: details-api
    spec:
      containers:
        - image: gcr.io/chrispage-dev/beer-details-api:0.4.0
          name: details-api
          ports:
            - containerPort: 8080
              name: details-api
          resources:
            requests:
              cpu: 10m

################################################################################
# Details DB service
################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: details-db
  labels:
    app: details-db
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: details-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: details-db
  labels:
    app: details-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details-db
  template:
    metadata:
      labels:
        app: details-db
    spec:
      containers:
        - image: mysql:5.7.20
          name: details-db
          ports:
            - containerPort: 3306
              name: details-db
          volumeMounts:
            - name: details-db-initdb
              mountPath: /docker-entrypoint-initdb.d
          resources:
            requests:
              cpu: 10m
      volumes:
        - name: details-db-initdb
          configMap:
            name: details-db-initdb-config
---
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: beer-api
          servicePort: 5000
