manifests/beer-app_details.yaml
# Copyright 2018
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
################################################################################
# Details API service
################################################################################
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: details-api
  name: details-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
  selector:
    app: details-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: details-api
  labels:
    app: details-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: details-api
  template:
    metadata:
      labels:
        app: details-api
    spec:
      containers:
        - image: gcr.io/chrispage-dev/beer-details-api:0.3.1
          name: details-api
          ports:
            - containerPort: 8080
              name: details-api

################################################################################
# Details DB service
################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: details-db
  labels:
    app: details-db
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: details-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: details-db
  labels:
    app: details-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details-db
  template:
    metadata:
      labels:
        app: details-db
    spec:
      containers:
        - image: mysql:5.7.20
          name: details-db
          ports:
            - containerPort: 3306
              name: details-db
          volumeMounts:
            - name: details-db-initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: details-db-initdb
          configMap:
            name: details-db-initdb-config
---
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: details-api
          servicePort: 8080
