manifests/beer-app_reviews.yaml
# Copyright 2018
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
################################################################################
# Reviews API service
################################################################################
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reviews-api
  name: reviews-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
  selector:
    app: reviews-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-api
  labels:
    app: reviews-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reviews-api
  template:
    metadata:
      labels:
        app: reviews-api
    spec:
      containers:
        - image: gcr.io/chrispage-dev/beer-reviews-api:0.2.1
          name: reviews-api
          # imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: reviews-api
---
################################################################################
# Reviews DB service
################################################################################
apiVersion: v1
kind: Service
metadata:
  name: reviews-db
  labels:
    app: reviews-db
spec:
  type: ClusterIP
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: nodes
  selector:
    app: reviews-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-db
  labels:
    app: reviews-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-db
  template:
    metadata:
      labels:
        app: reviews-db
    spec:
      containers:
        - image: docker.elastic.co/elasticsearch/elasticsearch:6.1.1
          name: reviews-db
          ports:
            - containerPort: 9200
              name: rest
            - containerPort: 9300
              name: nodes
---
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /.*
      # - path: /reviews.
        backend:
          serviceName: reviews-api
          servicePort: 8080
